# AV_System_Interaction

./: CMakeLists.txt  README.md  package.xml
nodes/: dummy_publisher.py  speed_control.py
